...
  bool _isLoading = true;

  late AnimationController _animationController;
  late Animation<double> _fadeInAnimation;

  // Keys for integration testing
  final Key _searchFieldKey = Key('searchField');
  final Key _userListKey = Key('userList');
  final Key _userCardKey = Key('userCard');
  final Key _eventButtonKey = Key('eventButton');
  final Key _profilePictureKey = Key('profilePicture');
  final Key _appBarTitleKey = Key('appBarTitle');

  @override
  void initState() {
    super.initState();
...
          ),
        ),
        bottomNavigationBar: BottomNavigationBar(
          items: const [
            BottomNavigationBarItem(
              icon: Icon(Icons.event_available),
              label: 'My Events',
            ),
            BottomNavigationBarItem(
              icon: Icon(Icons.home),
              label: 'Home',
            ),
          ],
...
